--- a/REVIEW_547893563478259432.md
+++ b/REVIEW_547893563478259432.md
@@ -20,6 +20,9 @@ EVIDENCE OF COLLABORATION
 MAXS FINAL MARK:
 73/100 - Excellent
 
+
+WILLS REVIEW
+
 Interest of content:
 16/20 - good stuff, well researched
 
@@ -57,3 +60,25 @@ EVIDENCE OF COLLABORATION
 
 JOSHs FINAL MARK:
 73/100 - Very Good
+
+
+
+ALEX'S REVIEW:
+
+Content
+18 - Lots of interesting content!
+
+Consistency etc..
+14 - Good, consistent, author info looks a bit crap
+
+Valid HTML
+20 - Valid HTML
+
+Evidence of Collaboration
+11 - Done a bit last minute, SHEE69 didn't pull his weight
+
+Total = 63 - 2.1
+
+
+
+
